[package]
name = "mlsnd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32"
thiserror = "1.0"
moving-least-squares = { version = "0.1.0", optional = true }
fastrand = { version = "1", optional = true }
num-traits = "0.2"

[dev-dependencies]
criterion = "0.3"
mlsnd = { path = ".", default-features = false, features = ["bench"] }

[features]
bench = ["fastrand", "moving-least-squares"]

[[bench]]
name = "benchmarks"
harness = false
