[package]
name = "mlsnd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32"
thiserror = "1.0"
num-traits = "0.2"
# this allows usage of the `testing` module in benchmarks.
moving-least-squares = { version = "0.1.0", optional = true }
fastrand = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.3"
# this activates the bench feature in development
mlsnd = { path = ".", default-features = false, features = ["bench"] }

[features]
bench = ["fastrand", "moving-least-squares"]

[[bench]]
name = "benchmarks"
harness = false
